--- a/client/app/views/aprobacion/planestudios/list.html
+++ b/client/app/views/aprobacion/planestudios/list.html
@@ -1,16 +1,12 @@
 <md-subheader class="md-primary " style="margin-right: 0">
 <h3>{{UI.title}}</h3>
 </md-subheader>
-<!-- Button New: solo visible cuando ningun elemento de la lista ha sido seleccionado-->
-<md-button ng-if="!UI.editMode" ng-click="New($event)" class="md-fab button-floating-bottom" aria-label="{{UI.message.Buttons.New}}" >
-  <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
-  <md-icon md-font-icon="fa fa-plus fa-lg"></md-icon>
-</md-button>
+
 <div layout="row" layout-align="center start" layout-margin layout-fill>
 <md-content flex class="md-padding page-content md-whiteframe-4dp" style="max-width:1020px;">
 
 <!--tabla: contiene el listado de elementos-->
-<md-progress-linear md-mode="indeterminate" ng-if="UI.refresh"></md-progress-linear>
+<md-progress-linear md-mode="indeterminate" ng-if="UI.refresh" class="md-accent"></md-progress-linear>
 <div class="table-responsive">
 <table ng-table="tableParams" show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
 
@@ -18,7 +14,7 @@
     <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
     <tr ng-repeat="item in $data" ng-click="item.active=!item.active;EnabledEdit(item)" ng-class="{'table-selected-row bgc-teal-50':item.active}">
       <td style="width:30px;">
-        <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-pink-500':item.active}"></span>
+        <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
       </td>
       <td class="text-left" data-title="'Nombre'" sortable="_facultad">
 
@@ -35,12 +31,13 @@
       </td>
       <td data-title="'Estado'">
         <strong>
-        <a href ng-switch="item.estado" title="{{item.estado}}" ng-click="alert('dsd')">
-          <span ng-switch-when="Registrado" class="fa fa-pencil tc-blue-grey-500"></span>
-          <span ng-switch-when="Pendiente" class="fa fa-spinner tc-blue-500"></span>
-          <span ng-switch-when="Aprobado" class="fa fa-check-circle tc-green-500"></span>
-          <span ng-switch-when="Observado" class="fa fa-eye tc-orange-500" ></span>
-        </a>
+          <a style="text-decoration:none;font-size:11px;color:#777;" href ng-switch="item.estado" title="{{item.estado}}" ng-click="alert('dsd')">
+            <span ng-switch-when="Registrado" class="fa fa-pencil tc-{{color.primary}}-500"></span>
+            <span ng-switch-when="Pendiente" class="fa fa-share-square tc-{{color.primary}}-500"></span>
+            <span ng-switch-when="Aprobado" class="fa fa-check-circle tc-{{color.primary}}-500"></span>
+            <span ng-switch-when="Observado" class="fa fa-eye tc-{{color.primary}}-500" ></span>
+            {{item.estado}}
+          </a>
         </strong>
       </td>
     </tr>
@@ -49,33 +46,26 @@
 </div>
 </md-content>
 </div>
+<!-- Button New: solo visible cuando ningun elemento de la lista ha sido seleccionado-->
+<md-button ng-if="!UI.editMode" ng-click="New($event)" class="md-fab md-fab-bottom-right" aria-label="{{UI.message.Buttons.New}}" >
+  <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
+  <md-icon md-font-icon="fa fa-plus fa-lg tc-white"></md-icon>
+</md-button>
 <!--acciones: se mostraran al seleccionar un elemento del listado-->
-<md-fab-speed-dial ng-if="UI.editMode" md-open="false" md-direction="up" class="md-fling button-floating-bottom">
+<md-fab-speed-dial ng-if="UI.editMode" md-open="false" md-direction="up" class="md-fling md-fab-bottom-right">
  <md-fab-trigger>
    <md-button aria-label="menu" class="md-fab">
      <md-icon md-font-icon="fa fa-bars fa-lg tc-white"></md-icon>
    </md-button>
  </md-fab-trigger>
+
  <md-fab-actions>
    <!--custom actions: Se agregan en el controlador solo cuando es necesario considerar mas opciones para cada elemento de la lista-->
    <md-button ng-repeat="action in UI.customActions" aria-label="{{action.label}}" class="md-fab md-raised md-mini" ng-click="action.onclick($event)">
      <md-tooltip md-direction="left">{{action.label}}</md-tooltip>
-     <md-icon md-font-icon="fa {{action.icon}} fa-lg tc-pink-500 " aria-label="{{action.label}}"></md-icon>
+     <md-icon md-font-icon="fa {{action.icon}} fa-lg tc-{{$root.color.accent}}-500 " aria-label="{{action.label}}"></md-icon>
    </md-button>
    <!--end custom actions-->
-   <!--default actions: Acciones por defecto que contendra cada interfaz de mantenimiento-->
-   <md-button aria-label="{{UI.message.Buttons.New}}" class="md-fab md-raised md-mini" ng-click="New($event)">
-     <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
-     <md-icon md-font-icon="fa fa-plus fa-lg tc-pink-500" aria-label="{{UI.message.Buttons.New}}"></md-icon>
-   </md-button>
-   <md-button aria-label="{{UI.message.Buttons.Edit}}" class="md-fab md-raised md-mini" ng-click="Edit($event)">
-     <md-tooltip md-direction="left">{{UI.message.Buttons.Edit}}</md-tooltip>
-     <md-icon md-font-icon="fa fa-pencil fa-lg tc-pink-500" aria-label="{{UI.message.Buttons.Edit}}"></md-icon>
-   </md-button>
-   <md-button aria-label="{{UI.message.Buttons.Delete}}" class="md-fab md-raised md-mini" ng-click="Delete($event)">
-     <md-tooltip md-direction="left">{{UI.message.Buttons.Delete}}</md-tooltip>
-     <md-icon md-font-icon="fa fa-trash fa-lg tc-pink-500" aria-label="{{UI.message.Buttons.Delete}}"></md-icon>
-   </md-button>
-   <!--end default actions-->
+  
  </md-fab-actions>
 </md-fab-speed-dial>
