Se agrego custom template requisitos curso plan de estudio detalle

--- a/client/app/styles/styls/main.styl
+++ b/client/app/styles/styls/main.styl
@@ -237,3 +237,19 @@ a.groupTitle
 	margin-right 0
 	.md-subheader-inner
 		padding 0 !important
+
+.autocomplete-custom-template
+	li
+		border-bottom 1px solid #ccc
+		height auto
+		padding-top 8px
+		padding-bottom 8px
+		white-space normal
+
+.item-title
+.item-metadata
+	display block
+	line-height 2
+	md-icon
+		height 18px
+		width 18px
