--- a/client/app/views/parametros/form.html
+++ b/client/app/views/parametros/form.html
@@ -37,15 +37,25 @@
 
         </div>
       </div>
+      <div flex layout="row" layput-sm="column">
+          <div flex="33">
+            <md-checkbox ng-model="model.activoPeriodo">
+              Activo Periodo
+            </md-checkbox>
+          </div>
+          <div flex="33">
+            <md-checkbox ng-model="model.activoEscuela">
+              Activo Escuela
+            </md-checkbox>
+          </div>
+          <div flex>
 
+          </div>
+      </div>
       <div flex layout="row" layout-sm="column">
         <div flex="50" layout="row" layout-align="start center" flex-sm="100">
-          <md-checkbox ng-model="model.activoPeriodo">
-            Activo Periodo
-          </md-checkbox>
-          <md-checkbox ng-model="model.activoEscuela">
-            Activo Escuela
-          </md-checkbox>
+
+
         </div>
         <div flex="50" layout="row" layout-align="end center" flex-sm="100">
           <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
