--- a/client/app/views/aprobacion/planestudios/list.html
+++ b/client/app/views/aprobacion/planestudios/list.html
@@ -20,6 +20,10 @@
 
           {{item.nombre}}
       </td>
+      <td class="text-left" data-title="'Escuela'" sortable="_escuela.nombre">
+
+          {{item._escuela.nombre}}
+      </td>
       <td class="text-left" data-title="'Periodo Inicio'" sortable="periodo_id" filter="{'periodo_id':'text'}">
         {{item._periodo.nombre}}
       </td>
@@ -47,25 +51,7 @@
 </md-content>
 </div>
 <!-- Button New: solo visible cuando ningun elemento de la lista ha sido seleccionado-->
-<md-button ng-if="!UI.editMode" ng-click="New($event)" class="md-fab md-fab-bottom-right" aria-label="{{UI.message.Buttons.New}}" >
-  <md-tooltip md-direction="left">{{UI.message.Buttons.New}}</md-tooltip>
-  <md-icon md-font-icon="fa fa-plus fa-lg tc-white"></md-icon>
+<md-button ng-if="UI.editMode" ng-click="Detail($event)" class="md-fab md-fab-bottom-right">
+  <md-tooltip md-direction="left">Ver Detalle del Plan de Estudios</md-tooltip>
+  <md-icon md-font-icon="fa fa-list fa-lg tc-white"></md-icon>
 </md-button>
-<!--acciones: se mostraran al seleccionar un elemento del listado-->
-<md-fab-speed-dial ng-if="UI.editMode" md-open="false" md-direction="up" class="md-fling md-fab-bottom-right">
- <md-fab-trigger>
-   <md-button aria-label="menu" class="md-fab">
-     <md-icon md-font-icon="fa fa-bars fa-lg tc-white"></md-icon>
-   </md-button>
- </md-fab-trigger>
-
- <md-fab-actions>
-   <!--custom actions: Se agregan en el controlador solo cuando es necesario considerar mas opciones para cada elemento de la lista-->
-   <md-button ng-repeat="action in UI.customActions" aria-label="{{action.label}}" class="md-fab md-raised md-mini" ng-click="action.onclick($event)">
-     <md-tooltip md-direction="left">{{action.label}}</md-tooltip>
-     <md-icon md-font-icon="fa {{action.icon}} fa-lg tc-{{$root.color.accent}}-500 " aria-label="{{action.label}}"></md-icon>
-   </md-button>
-   <!--end custom actions-->
-  
- </md-fab-actions>
-</md-fab-speed-dial>
