--- a/client/app/views/escuelas/params-procesos.html
+++ b/client/app/views/escuelas/params-procesos.html
@@ -35,7 +35,7 @@
                   <div flex-item>
                     <md-input-container class="md-block">
                       <label>Periodos</label>
-                      <md-select ng-model="filter._periodo" ng-model-options="{trackBy: '$value._id'}" >
+                      <md-select ng-model="filter._periodo" ng-model-options="{trackBy: '$value._id'}" ng-change="ListParametros()">
                         <md-option ng-repeat="periodo in periodos" ng-value="periodo">
                           {{periodo.nombre}}
                         </md-option>
@@ -47,15 +47,16 @@
                 <!--tabla: contiene el listado de elementos-->
                 <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh"  class="md-accent"></md-progress-linear>
                 <div class="table-responsive">
-                  <table ng-table="tableParams" show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
+                  <table ng-table="tableParamsParametros" show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
                     <tbody>
                       <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
                       <tr ng-repeat="item in $data" ng-click="item.active=!item.active;EnabledEdit(item)" ng-class="{'table-selected-row bgc-teal-50':item.active}">
                         <td style="width:30px;">
                           <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
                         </td>
-                        <td class="text-left" data-title="'Coidgo'" sortable="">{{item.codigo}}</td>
-                        <td class="text-left" data-title="'Nombre de Parametro'" sortable="">{{item.nombre}}</td>
+                        
+                        <td class="text-left" data-title="'Nombre de Parámetro'" sortable="">{{item._parametro}}</td>
+                        <td class="text-left" data-title="'Valor de Parámetro'" sortable="">{{item.valor}}</td>
                       </tr>
                     </tbody>
                   </table>
@@ -78,9 +79,20 @@
                     <div flex-item>
                       <md-input-container class="md-block">
                         <label>Escuela</label>
-                        <md-select ng-model="filter._escuela" ng-model-options="{trackBy: '$value._id'}" ng-change="ListPlanEstudios()">
+                        <md-select ng-model="filter._escuela" ng-model-options="{trackBy: '$value._id'}" >
                           <md-option ng-repeat="escuela in escuelas" ng-value="escuela">
                             {{escuela.nombre}}
+                          </md-option>
+                        </md-select>
+                      </md-input-container>
+                    </div>
+
+                    <div flex-item>
+                      <md-input-container class="md-block">
+                        <label>Periodos</label>
+                        <md-select ng-model="filter._periodo" ng-model-options="{trackBy: '$value._id'}" ng-change="ListProcesos()">
+                          <md-option ng-repeat="periodo in periodos" ng-value="periodo">
+                            {{periodo.nombre}}
                           </md-option>
                         </md-select>
                       </md-input-container>
@@ -90,15 +102,18 @@
                   <!--tabla: contiene el listado de elementos-->
                   <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh"  class="md-accent"></md-progress-linear>
                   <div class="table-responsive">
-                    <table ng-table="tableParams" show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
+                    <table ng-table="tableParamsProcesos" show-filter="false" class="table table-hover table-condensed table-striped table-bordered ">
                       <tbody>
                         <!-- En la mayoria de los casos solo sera necesario agregar o modificar la información de las columnas -->
                         <tr ng-repeat="item in $data" ng-click="item.active=!item.active;EnabledEdit(item)" ng-class="{'table-selected-row bgc-teal-50':item.active}">
                           <td style="width:30px;">
                             <span class="fa fa-square  fa-lg tc-blue-grey-50" ng-class="{'fa-check-square tc-{{$root.color.accent}}-500':item.active}"></span>
                           </td>
-                          <td class="text-left" data-title="'Coidgo'" sortable="">{{item.codigo}}</td>
-                          <td class="text-left" data-title="'Nombre de Proceso'" sortable="">{{item.nombre}}</td>
+
+                          <td class="text-left" data-title="'Nombre de Proceso'" sortable="">{{item._proceso}}</td>
+                          <td class="text-left" data-title="'Fecha Inicio'" sortable="">{{item.inicio}}</td>
+                          <td class="text-left" data-title="'Fecha Fin'" sortable="">{{item.fin}}</td>
+                          <td class="text-left" data-title="'Estado'" sortable="">{{item.estado}}</td>
                         </tr>
                       </tbody>
                     </table>
