Se ajusto estilos en header y sidenav

--- a/client/app/views/blocks/app_header.html
+++ b/client/app/views/blocks/app_header.html
@@ -1,14 +1,14 @@
 <div class="md-toolbar-tools">
   <md-button class="md-icon-button" aria-label="Settings" ng-click="SidenavToggle()">
-    <md-icon md-font-icon="fa fa-bars fa-lg"></md-icon>
+    <md-icon md-font-icon="fa fa-bars fa-lg tc-white"></md-icon>
   </md-button>
   <h2>
-    <span class="app-title">{{app.name}}</span> <span class="hidden-xs">{{app.module}}</span>
+    <span class="app-title tc-white">{{app.name}}</span> <span class="hidden-xs tc-white">{{app.module}}</span>
   </h2>
   <span flex></span>
   <md-menu>
           <md-button  class="md-icon-button" ng-click="$mdOpenMenu()" aria-label="Open menu">
-              <md-icon md-font-icon="fa fa-ellipsis-v fa-lg"></md-icon>
+              <md-icon md-font-icon="fa fa-ellipsis-v fa-lg tc-white"></md-icon>
           </md-button>
           <md-menu-content>
               <md-menu-item>
