--- a/client/app/views/blocks/app_sidenav.html
+++ b/client/app/views/blocks/app_sidenav.html
@@ -1,14 +1,14 @@
-<md-toolbar class="md-theme-indigo">
+<md-toolbar class="md-primary tc-white">
   <div class="md-toolbar-tools">
     <h2>{{app.name}}</h2>
     <span flex></span>
     <md-button class="md-icon-button" aria-label="Favorite" ng-click="close()">
-      <md-icon md-font-icon="fa fa-arrow-left fa-lg"></md-icon>
+      <md-icon md-font-icon="fa fa-arrow-left fa-lg tc-white"></md-icon>
     </md-button>
   </div>
 
 </md-toolbar>
-<md-content layout-padding class="bgc-teal-500">
+<md-content layout-padding class="bgc-{{color.primary}}-500">
 
 <div layout="column" layout-align="center center" style="height:160px;">
   <div layout-align="center start"  layout-padding>
