--- a/client/app/views/alumnos/form.html
+++ b/client/app/views/alumnos/form.html
@@ -10,6 +10,249 @@
       </div>
     </md-toolbar>
 
+    <!-- Inicio -->
+    <md-tabs md-selected="0" md-dynamic-height md-border-bottom>
+
+      <md-tab label="Datos generales">
+        <md-content class="md-padding">
+
+          <div  flex-container="row" flex-gutter="24">
+              <div flex-item>
+                <md-input-container class="md-block">
+                  <label>Código</label>
+                  <input required name="codigo" ng-model="model.codigo">
+                  <div ng-messages="myForm.codigo.$error"  ng-if="submited">
+                    <div ng-message="required">{{message.Required}}</div>
+                  </div>
+                </md-input-container>
+              </div>
+              <div flex-item>
+                <md-input-container class="md-block">
+                  <label>Nombres</label>
+                  <input required name="nombres" ng-model="model.nombres">
+                  <div ng-messages="myForm.nombres.$error"  ng-if="submited">
+                    <div ng-message="required">{{message.Required}}</div>
+                  </div>
+                </md-input-container>
+              </div>
+              <div flex-item>
+                <md-input-container class="md-block">
+                  <label>Apellidos</label>
+                  <input required name="apellidos" ng-model="model.apellidos">
+                  <div ng-messages="myForm.apellidos.$error"  ng-if="submited">
+                    <div ng-message="required">{{message.Required}}</div>
+                  </div>
+                </md-input-container>
+              </div>
+              <div flex-item>
+                <md-input-container class="md-block">
+                  <label>Docuemnto Indentidad</label>
+                  <input required name="documento" ng-model="model.documento">
+                  <div ng-messages="myForm.documento.$error"  ng-if="submited">
+                    <div ng-message="required">{{message.Required}}</div>
+                  </div>
+                </md-input-container>
+              </div>
+          </div>
+
+          <div  flex-container="row" flex-gutter="24">
+            <div flex-item>
+              <md-input-container class="md-block">
+                <label>Dirección</label>
+                <input required name="direccion" ng-model="model.direccion" ng-readonly="nombreFound">
+                <div ng-messages="myForm.direccion.$error"  ng-if="submited">
+                  <div ng-message="required">{{message.Required}}</div>
+                </div>
+              </md-input-container>
+            </diV>
+            <div flex-item>
+              <md-input-container class="md-block">
+                <label>Email</label>
+                <input required name="email" ng-model="model.email">
+                <div ng-messages="myForm.email.$error"  ng-if="submited">
+                  <div ng-message="required">{{message.Required}}</div>
+                </div>
+              </md-input-container>
+            </div>
+            <div flex-item>
+              <md-input-container class="md-block" >
+                <label>Estado Civil</label>
+                <md-select ng-model="model.estadoCivil" name="estadoCivil" required>
+                  <md-option ng-repeat="civil in estadoCivil" ng-value="civil">
+                    {{civil}}
+                  </md-option>
+                </md-select>
+              </md-input-container>
+            </div>
+          </div>
+
+          <div  flex-container="row" flex-gutter="24">
+            <div flex-item>
+              <md-input-container class="md-block" >
+                <label>Sexo</label>
+                <md-select ng-model="model.sexo" name="sexo" required>
+                  <md-option ng-repeat="sex in sexo" ng-value="sex">
+                    {{sex}}
+                  </md-option>
+                </md-select>
+              </md-input-container>
+            </div>
+            <div flex-item>
+               <md-input-container class="md-block">
+                 <label>Telefono</label>
+                 <input required name="telefono" ng-model="model.telefono">
+                 <div ng-messages="myForm.telefono.$error"  ng-if="submited">
+                   <div ng-message="required">{{message.Required}}</div>
+                 </div>
+               </md-input-container>
+            </div>
+            <div flex>
+              <md-input-container class="md-block">
+                <!--label>Fecha Nacimiento</label-->
+                <md-datepicker required name="fechaNacimiento" ng-model="model.fechaNacimiento" md-placeholder="Fecha Nacimiento"></md-datepicker>
+                <!--input required name="fecharesolucion" ng-model="model.fecharesolucion"-->
+                <div ng-messages="myForm.fechaNacimiento.$error" ng-if="submited">
+                  <div ng-message="required">{{message.Required}}</div>
+                </div>
+              </md-input-container>
+            </div>
+            <div flex-item>
+             <md-input-container class="md-block">
+               <label>Lugar Nac.</label>
+               <input required name="lugarNacimiento" ng-model="model.lugarNacimiento">
+               <div ng-messages="myForm.lugarNacimiento.$error"  ng-if="submited">
+                 <div ng-message="required">{{message.Required}}</div>
+               </div>
+             </md-input-container>
+            </div>
+          </div>
+
+        </md-content>
+      </md-tab>
+
+      <md-tab label="Otros datos">
+        <md-content class="md-padding">
+
+          <div  flex-container="row" flex-gutter="24">
+            <div flex-item>
+              <md-input-container class="md-block">
+                <label>Periodo Ingreso</label>
+                <md-select ng-model="model._periodoIngreso" ng-model-options="{trackBy: '$value._id'}">
+                  <md-option ng-repeat="periodo in periodos" ng-value="periodo">
+                    {{periodo.nombre}}
+                  </md-option>
+                </md-select>
+                <div ng-messages="myForm._periodoIngreso.$error" ng-if="submited">
+                  <div ng-message="required">{{message.Required}}</div>
+                </div>
+              </md-input-container>
+            </div>
+            <div flex-item>
+              <md-input-container class="md-block">
+                <label>Facultad</label>
+                <md-select ng-model="model._facultad" ng-model-options="{trackBy: '$value._id'}" ng-change="LoadEscuelas()">
+                  <md-option ng-repeat="fac in facultades" ng-value="fac">
+                    {{fac.nombre}}
+                  </md-option>
+                </md-select>
+              </md-input-container>
+            </div>
+            <div flex-item>
+              <md-input-container class="md-block">
+                <label>Escuela</label>
+                <md-select ng-model="model._escuela" ng-model-options="{trackBy: '$value._id'}">
+                  <md-option ng-repeat="escuela in escuelas" ng-value="escuela">
+                    {{escuela.nombre}}
+                  </md-option>
+                </md-select>
+                <div ng-messages="myForm._escuela.$error" ng-if="submited">
+                  <div ng-message="required">{{message.Required}}</div>
+                </div>
+              </md-input-container>
+            </div>
+
+          </div>
+
+          <div  flex-container="row" flex-gutter="24">
+            <div flex-item>
+              <md-input-container class="md-block">
+                <label>Modalidad</label>
+                <md-select ng-model="model._modalidadIngreso" ng-model-options="{trackBy: '$value._id'}">
+                  <md-option ng-repeat="modalidad in modalidades" ng-value="modalidad">
+                    {{modalidad.nombre}}
+                  </md-option>
+                </md-select>
+                <div ng-messages="myForm._modalidadIngreso.$error" ng-if="submited">
+                  <div ng-message="required">{{message.Required}}</div>
+                </div>
+              </md-input-container>
+            </div>
+            <div flex-item>
+              <md-input-container class="md-block">
+                <label>Tipo Condición</label>
+                <md-select ng-model="model._tipoCondicionAlumno" ng-model-options="{trackBy: '$value._id'}">
+                  <md-option ng-repeat="condicion in condiciones" ng-value="condicion">
+                    {{condicion.nombre}}
+                  </md-option>
+                </md-select>
+                <div ng-messages="myForm._tipoCondicionAlumno.$error" ng-if="submited">
+                  <div ng-message="required">{{message.Required}}</div>
+                </div>
+              </md-input-container>
+            </div>
+            <div flex-item>
+              <md-input-container class="md-block">
+                <label>Situación</label>
+                <md-select ng-model="model._situacionAlumno" ng-model-options="{trackBy: '$value._id'}">
+                  <md-option ng-repeat="situacion in situaciones" ng-value="situacion">
+                    {{situacion.nombre}}
+                  </md-option>
+                </md-select>
+                <div ng-messages="myForm._situacionAlumno.$error" ng-if="submited">
+                  <div ng-message="required">{{message.Required}}</div>
+                </div>
+              </md-input-container>
+            </div>
+          </div>
+
+          <div  flex-container="row" flex-gutter="24" ng-if="includeUserData">
+            <div flex-item>
+              <md-input-container class="md-block">
+                <label>Usuario</label>
+                <input required  ng-model="model._usuario.username">
+                <div ng-messages="myForm._usuario.username.$error" ng-if="submited">
+                  <div ng-message="required">{{message.Required}}</div>
+                </div>
+              </md-input-container>
+            </div>
+            <div flex-item>
+              <md-input-container class="md-block">
+                <label>Contraseña</label>
+                <input required type="password" ng-model="model._usuario.password">
+                <div ng-messages="myForm._usuario.password.$error" ng-if="submited">
+                  <div ng-message="required">{{message.Required}}</div>
+                </div>
+              </md-input-container>
+            </div>
+          </div>
+
+        </md-content>
+      </md-tab>
+
+    </md-tabs>
+
+    <div class="dialog__actions">
+        <div class="pull-left">
+          <md-checkbox ng-model="model.activo">
+               Activo
+             </md-checkbox>
+        </div>
+       <md-button class="md-raised" ng-click="Cancel()">{{Buttons.Cancel}}</md-button>
+       <md-button class="md-raised md-primary" ng-click="Save(myForm)">{{Buttons.Save}}</md-button>
+    </div>
+    <!-- Fin -->
+
+    <!-- Antes
     <md-dialog-content class="window-modal-content-sm">
       <div flex layout="row" layout-sm="row">
         <div flex>
@@ -90,6 +333,8 @@
         </div>
       </div>
     </md-dialog-content>
+
+    -->
 
     <md-dialog-actions layout="row">
     </md-dialog-actions>
