Aprobarcion de Cursos - Parte 1

--- a/client/app/views/docentes/form.html
+++ b/client/app/views/docentes/form.html
@@ -104,7 +104,7 @@
         <div flex>
           <md-input-container class="md-block">
             <label>Nombre de Usuario</label>
-            <input required name="username" ng-model="model._usuario.username">
+            <input required  ng-model="model._usuario.username">
             <div ng-messages="myForm.username.$error" ng-if="submited">
               <div ng-message="required">{{message.Required}}</div>
             </div>
@@ -113,7 +113,7 @@
         <div flex>
           <md-input-container class="md-block">
             <label>Contraseña</label>
-            <input required name="username" ng-model="model._usuario.password">
+            <input required  ng-model="model._usuario.password">
             <div ng-messages="myForm.username.$error" ng-if="submited">
               <div ng-message="required">{{message.Required}}</div>
             </div>
