--- a/client/app/styles/styls/main.styl
+++ b/client/app/styles/styls/main.styl
@@ -253,3 +253,19 @@ a.groupTitle
 	md-icon
 		height 18px
 		width 18px
+
+
+.s64
+	font-size 64px
+.s32
+	font-size 48px
+.s24
+	font-size 28px
+
+md-icon.fa
+  	display block
+  	padding-left 0px
+	margin-right 4px
+
+md-icon.s32 span
+	padding-left 8px
