--- a/client/app/views/alumno/misdatos.html
+++ b/client/app/views/alumno/misdatos.html
@@ -7,50 +7,144 @@
     <md-content flex class="md-padding page-content md-whiteframe-4dp" style="max-width:1020px;">
       <md-progress-linear md-mode="indeterminate" ng-if="UI.refresh" class="md-accent"></md-progress-linear>
       <div flex layout="row" layout-fill>
-        <div flex>
-          <div flex layout="row">
-            Mis Datos
-          </div>
-          <div flex layout="row">
-            Mi COntraseñahhh
-          </div>
-        </div>
-        <div flex>
-          <div flex layout="row">
-            <md-input-container class="md-block">
-              <label>Año</label>
-              <input required name="anio" ng-model="model.anio">
-              <div ng-messages="myForm.anio.$error" ng-if="submited">
-                <div ng-message="required">{{message.Required}}</div>
+          <div flex-gt-sm="33" flex="33">
+              <div class="mt+ mr+">
+                  <strong>Datos Personales:</strong>
+                  <br/>
+                  <small>Tus datos personales, como tu DNI, nombre, apellido</small>
               </div>
-            </md-input-container>
-            <md-input-container class="md-block">
-              <label>Año</label>
-              <input required name="anio" ng-model="model.anio">
-              <div ng-messages="myForm.anio.$error" ng-if="submited">
-                <div ng-message="required">{{message.Required}}</div>
-              </div>
-            </md-input-container>
-            <md-input-container class="md-block">
-              <label>Año</label>
-              <input required name="anio" ng-model="model.anio">
-              <div ng-messages="myForm.anio.$error" ng-if="submited">
-                <div ng-message="required">{{message.Required}}</div>
-              </div>
-            </md-input-container>
-            <md-input-container class="md-block">
-              <label>Año</label>
-              <input required name="anio" ng-model="model.anio">
-              <div ng-messages="myForm.anio.$error" ng-if="submited">
-                <div ng-message="required">{{message.Required}}</div>
-              </div>
-            </md-input-container>
           </div>
-          <div flex layout="row">
-            dsdsds
+          <div flex-gt-sm="33" flex="66">
+              <div flex layout="row">
+                  <div flex>
+                      <md-input-container class="md-icon-float md-block">
+                        <label>DNI:</label>
+                        <md-icon md-font-icon="fa-credit-card" class="fa s24 md-primary md-hue-1"></md-icon>
+                        <input required name="documento" ng-model="model.documento">
+                        <div ng-messages="myForm.documento.$error" ng-if="submited">
+                          <div ng-message="required">{{message.Required}}</div>
+                        </div>
+                      </md-input-container>
+                  </div>
+              </div>
+              <div flex layout="row">
+                  <div flex>
+                      <md-input-container class="md-icon-float md-block">
+                        <label>Nombres</label>
+                        <md-icon md-font-icon="fa-user" class="fa s24 md-primary md-hue-1"></md-icon>
+                        <input required name="nombres" ng-model="model.nombres">
+                        <div ng-messages="myForm.nombres.$error" ng-if="submited">
+                          <div ng-message="required">{{message.Required}}</div>
+                      </md-input-container>
+                  </div>
+                  </div>
+              </div>
+              <div flex layout="row">
+                  <div flex>
+                      <md-input-container class="md-icon-float md-block">
+                        <label>Apellidos</label>
+                        <md-icon md-font-icon="fa-user" class="fa s24 md-primary md-hue-1"></md-icon>
+                        <input required name="apellidos" ng-model="model.apellidos">
+                        <div ng-messages="myForm.apellidos.$error" ng-if="submited">
+                          <div ng-message="required">{{message.Required}}</div>
+                        </div>
+                      </md-input-container>
+                  </div>
+              </div>
+              <div flex layout="row">
+                  <div flex>
+                      <md-input-container class="md-icon-float md-block">
+                        <label>Sexo</label>
+                        <md-icon md-font-icon="fa-user" class="fa s24 md-primary md-hue-1"></md-icon>
+                        <md-select ng-model="model.sexo" name="sexo" required>
+                          <md-option ng-repeat="sex in sexo" ng-value="sex">
+                            {{sex}}
+                          </md-option>
+                        </md-select>
+                        <div ng-messages="myForm.sexo.$error" ng-if="submited">
+                          <div ng-message="required">{{message.Required}}</div>
+                        </div>
+                      </md-input-container>
+                  </div>
+              </div>
+              <div flex layout="row">
+                  <div flex>
+                      <md-input-container class="md-icon-float md-block">
+                        <label>Fecha de Nacimiento</label>
+                        <md-icon md-font-icon="fa-calendar" class="fa s24 md-primary md-hue-1"></md-icon>
+                        <input required name="fechaNacimiento" ng-model="model.fechaNacimiento">
+                        <div ng-messages="myForm.fechaNacimiento.$error" ng-if="submited">
+                          <div ng-message="required">{{message.Required}}</div>
+                        </div>
+                      </md-input-container>
+                  </div>
+              </div>
+              <div flex layout="row">
+                  <div flex>
+                      <md-input-container class="md-icon-float md-block">
+                        <label>Lugar de Nacimiento</label>
+                        <md-icon md-font-icon="fa-map-marker" class="fa s24 md-primary md-hue-1"></md-icon>
+                        <input required name="lugarNacimiento" ng-model="model.lugarNacimiento">
+                        <div ng-messages="myForm.lugarNacimiento.$error" ng-if="submited">
+                          <div ng-message="required">{{message.Required}}</div>
+                        </div>
+                      </md-input-container>
+                  </div>
+              </div>
           </div>
-        </div>
       </div>
+
+
+
+      <div flex layout="row" layout-fill>
+          <div flex-gt-sm="33" flex="33">
+              <div class="mt+ mr+">
+                  <strong>Datos de Contacto:</strong>
+                  <br/>
+                  <small>Datos a través de los cuales podemos contactarte</small>
+              </div>
+          </div>
+          <div flex-gt-sm="33" flex="66">
+              <div flex layout="row">
+                  <div flex>
+                      <md-input-container class="md-icon-float md-block">
+                        <label>E-mail:</label>
+                        <!--md-icon md-svg-src="img/icons/ic_email_24px.svg" class="email"></md-icon-->
+                        <md-icon md-font-icon="fa-envelope" class="fa s24 md-primary md-hue-1"></md-icon>
+                        <input required name="email" ng-model="model.email">
+                        <div ng-messages="myForm.email.$error" ng-if="submited">
+                          <div ng-message="required">{{message.Required}}</div>
+                        </div>
+                      </md-input-container>
+                  </div>
+              </div>
+              <div flex layout="row">
+                  <div flex>
+                      <md-input-container class="md-icon-float md-block">
+                        <label>Teléfono:</label>
+                        <md-icon md-font-icon="fa-mobile" class="fa s24 md-primary md-hue-1"></md-icon>
+                        <input required name="telefono" ng-model="model.telefono">
+                        <div ng-messages="myForm.telefono.$error" ng-if="submited">
+                          <div ng-message="required">{{message.Required}}</div>
+                        </div>
+                      </md-input-container>
+                  </div>
+              </div>
+              <div flex layout="row">
+                  <div flex>
+                      <md-input-container class="md-icon-float md-block">
+                        <label>Dirección</label>
+                        <md-icon md-font-icon="fa-map-marker" class="fa s24 md-primary md-hue-1"></md-icon>
+                        <input required name="direccion" ng-model="model.direccion">
+                        <div ng-messages="myForm.direccion.$error" ng-if="submited">
+                          <div ng-message="required">{{message.Required}}</div>
+                        </div>
+                      </md-input-container>
+                  </div>
+              </div>
+          </div>
+      </div>
+
     </md-content>
   </div>
 </md-content>
