se agrefo model para ingresante

--- a/client/app/views/alumnos/form.html
+++ b/client/app/views/alumnos/form.html
@@ -14,7 +14,7 @@
     <md-tabs md-selected="0" md-dynamic-height md-border-bottom>
 
       <md-tab label="Datos generales">
-        <md-content class="md-padding">
+        <md-content class="md-padding window-modal-content-sm">
 
           <div  flex-container="row" flex-gutter="24">
               <div flex-item>
